--- a/style.css
+++ b/style.css
@@ -2,12 +2,17 @@ body{
     background-color: darkslategrey;
     display: flex;
     justify-content: center;
+    
 }
 
 .container {
     background-color: brown;
+    min-width: 800px;
+    min-height: 800px;
+    max-width: 800px;
+    max-height: 800px;
     display: grid;
-    grid-template-columns: repeat(16, 1fr);
+    
 }
 
 div {
