--- a/style.css
+++ b/style.css
@@ -16,12 +16,12 @@ body{
 }
 
 div {
-    border: solid 1px gray; 
+    border: solid 1px purple; 
     background-color: goldenrod;
 }
 
 div:hover {
-    background-color: blueviolet;
+    background-color: orange;
 }
 
 button {
